--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.min.version>1.8</java.min.version>
+		<java.min.version>1.11</java.min.version>
 		<maven.min.version>3.0.0</maven.min.version>
 		<maven.compiler.source>${java.min.version}</maven.compiler.source>
 		<maven.compiler.target>${java.min.version}</maven.compiler.target>
@@ -32,6 +32,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>com.google.code.gson</groupId>
+				<artifactId>gson</artifactId>
+				<version>2.8.6</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
 				<version>3.3.3</version>
@@ -44,6 +50,11 @@
 		<dependency>
 			<groupId>com.pi4j</groupId>
 			<artifactId>pi4j-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
 		</dependency>
 
 		<dependency>
